# claire-advisoryai-hackathon

./: .env.example  .gitignore  AWS_SETUP.md  README.MD  README.md  demo_data.json  docker-compose.aws.yaml  docker-compose.yaml
.github/workflows/: ci.yaml
apps/backend/: Dockerfile  README.md  config.py  main.py  pyproject.toml
apps/backend/api/v1/: api.py  chatbot.py  earn_extra.py  file_uploads.py  goals.py  insights.py  query_transactions.py  users.py
apps/backend/core/: auth.py  logging_config.py
apps/backend/models/: banking_transaction.py  earn_extra_plan.py  user.py
apps/backend/schemas/: chat.py  graph.py  transaction_category.py  transaction_response.py
apps/backend/services/ai_agent/: earn_extra_generator.py  subscription_classifier.py  transaction_analyzer.py
apps/backend/services/db/: postgres_connector.py
apps/backend/services/demo/: demo_loader.py
apps/backend/services/document_parser/: financial_text_extractor.py
apps/backend/services/langgraph_agent/: graph.py  llm.py
apps/backend/services/langgraph_agent/prompts/: __init__.py  system.md
apps/backend/services/langgraph_agent/tools/: __init__.py  duckduckgo_search.py  query_sankey.py  query_subscriptions.py
apps/backend/services/object_store/: minio_connector.py
apps/backend/utils/: graph.py  sankey.py
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: AppSidebar.tsx  Chat.tsx  EarnExtra.tsx  Goals.tsx  (+6 more)
postgres/: Dockerfile  init.sql
scripts/: create-bucket.sh
(+30 files in other folders)
