[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "minio>=7.2.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "pdfplumber>=0.11.0",
    "pypdf2>=3.0.0",
    "openpyxl>=3.1.0",
    "sqlmodel>=0.0.31",
    "sqlalchemy>=2.0.45",
    "bcrypt>=5.0.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.21",
    "pydantic[email]>=2.12.5",
    "langchain-core>=1.2.7",
    "langgraph>=1.0.6",
    "langchain-community>=0.4.1",
    "asgiref>=3.11.0",
    "langchain-openai>=1.1.7",
    "psycopg-pool>=3.3.0",
    "langchain-postgres>=0.0.16",
    "mem0ai>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.3",
    "structlog>=25.5.0",
    "ddgs>=9.10.0",
    "PyJWT>=2.8.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]
